Changes made and submodules added

--- a/church website/index.html
+++ b/church website/index.html
@@ -5,17 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DLCF FUNNAAB WEBSITE</title>
+    <!-- favicon-link -->
+    <link rel="icon" href="Logo.png" type="image/x-icon">
+    <title>DLCF OGUN-CENTRAL WEBSITE</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Google-font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,900&family=Roboto&display=swap" rel="stylesheet">
+    <!-- font-awesome-CDN link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
-
+    <!-- jquery - cdn -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 
@@ -44,10 +48,10 @@
                     <!-- <span style="cursor: pointer;"><img src="feDropDown1.png" alt="#"></span> -->
                     <div class="display-none">
                         <div class="dropdown">
-                            <a class="dropdown-menu js-funaab" href="#">FUNAAB</a>
+                            <a class="dropdown-menu js-funaab" href="#">FUNAAB&#9662;</a>
                             <div class="funaab-container">
                                 <div class="funaab-elem">
-                                    <a class="funaab-menu" href="www.google.com">CAMP <span style="opacity: 0;">....</span></a>
+                                    <a class="funaab-menu" href="../locations/Funaab Camp location/index.html">CAMP <span style="opacity: 0;">....</span></a>
                                     <a class="funaab-menu" href="#">BETHEL</a>
                                     <a class="funaab-menu" href="#">PENIEL</a>
                                     <a class="funaab-menu" href="#">EXCEL</a>
@@ -57,7 +61,7 @@
                                 </div>
                             </div>
 
-                            <a class="dropdown-menu" href="#">MAPOLY</a>
+                            <a class="dropdown-menu" href="../locations/Mapoly location/index.html">MAPOLY</a>
                             <a class="dropdown-menu" href="#">LEME <span style="opacity: 0;">......</span></a>
                         </div>
 
@@ -66,7 +70,7 @@
                 </li>
 
                 <button class="sign-in">
-                        <a href="#">Sign in</a>
+                        <a href="../sign-up/index.html">Sign in</a>
                     </button>
             </ul>
             <div class="hamburger">
@@ -126,22 +130,27 @@
             <div class="parent-div">
                 <div class="box-1">
                     <div class="bible-img common"><img src="bible.png" alt="bible_pics"></div>
-                    <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sequi, numquam ut sit sapiente accusantium libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui. Eum unde doloremque distinctio. Lorem ipsum dolor
-                        sit amet, consectetur adipisicing elit. Tenetur aliquid totam aut blanditiis nesciunt modi, mollitia quasi laborum ipsum culpa, odit excepturi. Atque debitis laudantium maiores explicabo at facere facilis.
+                    <p class="box-text"><b>THE BIBLE</b>: The bible is the most important book for every Generation. It is written by men of God with the inspiration of the Holy Spirit. It is a sacred book that reveals God to us. The Bible help us to know our Creator and
+                        how we can have and maintain a deeper relationship with Him. It is a book that when we read it and meditate on it's word we are renewed and rejuvenate to face any new challenges. The BIBLE is the Basic Instructions Before Leaving
+                        Earth. So therefore we must read it daily to ensure we are ready to face anything that comes our way.
+                        <a class="more" href="#">read more</a>
                     </p>
                 </div>
 
                 <div class="box-2">
                     <div class="cool-waters-img common"><img src="cool_waters.png" alt="cool_waters pic"></div>
-                    <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sequi, numquam ut sit sapiente accusantium libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui. Eum unde doloremque distinctio. Lorem ipsum dolor
-                        sit amet consectetur adipisicing elit. Eos, sequi quisquam rem cumque quasi tenetur distinctio tempora quaerat molestiae voluptates veritatis iste sunt quos debitis sapiente perferendis. Neque, at numquam.
+                    <p class="box-text"><b>HEAVEN</b>: Heaven is the abode of God, it is where the Almighty resides. It is the home of everyone who lived and died as Children of God, it is the dwelling place for Saints and pilgrims who gave their all for the work of the
+                        Lord. Heaven is a Holy place, there is no crying, sorrow, pain or death there, it is a place of laughter, joy, happiness and comfort. It is not a place for sinner, pretenders, scammer, scorners, tricksters and so on.It is a personal
+                        choice. Where would you like to be after the end of your time on earth. Heaven or the other side.
+                        <a class="more" href="#">read more</a>
                     </p>
                 </div>
 
                 <div class="box-3">
-                    <div class="fire-img common"><img src="fire.png" alt="fire pics"></div>
-                    <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sequi, numquam ut sit sapiente accusantium libero assumenda aut laborum iure iste autem culpa ea, voluptatem qui. Eum unde doloremque distinctio. Lorem ipsum, dolor
-                        sit amet consectetur adipisicing elit. Officia doloremque expedita impedit, voluptate, maxime similique nostrum laudantium at voluptatibus facere ipsum assumenda, est accusantium ullam magnam quaerat aspernatur adipisci excepturi.
+                    <div class="fire-img common"><img src="Restitution_img.jpeg" alt="fire pics"></div>
+                    <p class="box-text"><b>RESTITUTION</b>: This is the act of restoring something taken without the owner permission. It is one of the Holy Bible Doctrines. It is one of the attributes of a genuine converted sinner who has turned from his or her sins and
+                        accepted Christ as their Lord and personal Saviour. It is to restore all that was wrongfully taken or withheld from the rightful owner.It is an act of correcting the wrongs committed. Restitution cannot be done ordinary or anyhow.
+                        It is done with the help of the Holy Spirit. <a href="#" class="more">read more</a>
                     </p>
                 </div>
 
@@ -153,16 +162,16 @@
                 <div class="address">
                     <div class="contents1">
                         <span class="ft-title">ADDRESS</span>
-                        <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>info@dlcfsw.com.ng</a>
-                        <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i>080xxxxxxxxxx</a>
-                        <a href="#" target="_blank">2-10, AYODELE OKEOWO <br>STREET GBAGADA, LAGOS</a>
+                        <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i>info@dlcfsw.com.ng</a>
+                        <a href="#" target="_blank"><i class="fa-solid fa-phone"></i>080xxxxxxx</a>
+                        <a href="#" target="_blank">DLCF, OGUN-CENTRAL</a>
                     </div>
                 </div>
                 <div class="home">
                     <div class="contents1">
                         <span class="ft-title">HOME</span>
-                        <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>About us</a>
-                        <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i></i>Publications</a>
+                        <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i>About us</a>
+                        <a href="#" target="_blank"><i class="fa-solid fa-phone""></i></i>Publications</a>
                         <a href="#" target="_blank">Report</a>
                         <a href="#" target="_blank">Locations</a>
 
@@ -171,22 +180,24 @@
                 <div class="sermon">
                     <div class="contents1">
                         <span class="ft-title">SERMON</span>
-                        <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>Bible Studies</a>
-                        <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i></i>Sunday Worships</a>
-                        <a href="#" target="_blank">Thursday Revival and Evangelism Training Service</a>
+                        <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i>Bible Studies</a>
+                        <a href="#" target="_blank"><i class="fa-solid fa-phone"></i></i>Sunday Worships</a>
+                        <a href="#" target="_blank">TRETS</a>
                         <a href="#" target="_blank">Special Messages</a>
                     </div>
                 </div>
                 <div class="events">
                     <div class="contents1">
                         <span class="ft-title">EVENTS</span>
-                        <a href="#" target="_blank"><i class="fa-regular fa-envelope" style="color: #1355c9;"></i>GCK July Edition</a>
-                        <a href="#" target="_blank"><i class="fa-solid fa-phone" style="color: #1f10ea;"></i></i>Coming soon</a>
+                        <a href="#" target="_blank"><i class="fa-regular fa-envelope""></i>GCK Edition</a>
+                        <a href="#" target="_blank"><i class="fa-solid fa-phone""></i></i>Coming soon</a>
                         <a href="#" target="_blank">Coming soon</a>
                     </div>
                 </div>
+                <span class="copyright">&copy; Copyright DLCF2023</span>
             </div>
         </div>
+
     </main>
     <script src="script.js"></script>
 </body>
