Adding and modifying submdules

--- a/church website/index.html
+++ b/church website/index.html
@@ -51,7 +51,7 @@
                             <a class="dropdown-menu js-funaab" href="#">FUNAAB&#9662;</a>
                             <div class="funaab-container">
                                 <div class="funaab-elem">
-                                    <a class="funaab-menu" href="../locations/Funaab Camp location/index.html">CAMP <span style="opacity: 0;">....</span></a>
+                                    <a class="funaab-menu" href="../Dlcf-locations/Funaab Camp location/index.html">CAMP <span style="opacity: 0;">....</span></a>
                                     <a class="funaab-menu" href="#">BETHEL</a>
                                     <a class="funaab-menu" href="#">PENIEL</a>
                                     <a class="funaab-menu" href="#">EXCEL</a>
@@ -61,7 +61,7 @@
                                 </div>
                             </div>
 
-                            <a class="dropdown-menu" href="../locations/Mapoly location/index.html">MAPOLY</a>
+                            <a class="dropdown-menu" href="../Dlcf-locations/Mapoly location/index.html">MAPOLY</a>
                             <a class="dropdown-menu" href="#">LEME <span style="opacity: 0;">......</span></a>
                         </div>
 
@@ -70,7 +70,7 @@
                 </li>
 
                 <button class="sign-in">
-                        <a href="../sign-up/index.html">Sign in</a>
+                        <a href="../Sign-in---Sign-up-Page-DLCF-Ogun-State-Central/index.html">Sign in</a>
                     </button>
             </ul>
             <div class="hamburger">
